--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
+    "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "devicons-react": "^1.3.0",
     "framer-motion": "^11.0.12",
     "lucide-react": "^0.344.0",
     "next": "14.1.1",
