--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
+    "@react-three/drei": "^9.102.6",
+    "@react-three/fiber": "^8.15.19",
+    "@types/three": "^0.162.0",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "devicons-react": "^1.3.0",
     "framer-motion": "^11.0.12",
     "lucide-react": "^0.344.0",
     "next": "14.1.1",
@@ -21,7 +23,7 @@
     "react-dom": "^18",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "twin.macro": "^3.4.1"
+    "three": "^0.162.0"
   },
   "devDependencies": {
     "@types/node": "^20",
