--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "14.1.1",
     "react": "^18",
     "react-dom": "^18",
+    "sharp": "^0.33.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.162.0"
