--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@react-three/drei": "^9.102.6",
     "@react-three/fiber": "^8.15.19",
-    "@types/three": "^0.162.0",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.12",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.344.0",
     "next": "14.1.1",
     "react": "^18",
@@ -30,6 +30,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/three": "^0.162.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.1",
